Made becoming a Lich harder and Focuses Enchantable.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -78,6 +78,8 @@
   "entity.goety.penance":"Penance",
   "entity.goety.boat":"Boat",
   "entity.goety.soulfireball":"Soul Fireball",
+  "entity.goety.fireball": "Small Fireball",
+  "entity.goety.lavaball": "Fireball",
   "entity.goety.warped_spear":"Warped Spear",
   "entity.goety.pitchfork":"Pitchfork",
   "entity.goety.scorchball":"Nether Meteor",
@@ -218,13 +220,14 @@
   "item.goety.apostle_blood_bottle": "Unholy Blood",
   "item.goety.undeath_potion": "Potion of Transformation",
   "item.goety.emerald_amulet": "Emerald Amulet",
-  "item.goety.vampiric_amulet": "Vampiric Amulet",
-  "item.goety.skull_amulet": "Skull Amulet",
   "item.goety.ring_of_want": "Ring of Want",
   "item.goety.brain": "Brain",
   "item.goety.soul_transfer": "Transfer Gem",
   "item.goety.haunted_boat": "Haunted Boat",
   "item.goety.dried_remnant": "Dried Remnant",
+  "item.goety.forbidden_piece": "Forbidden Piece",
+  "item.goety.forbidden_fragment": "Forbidden Fragment",
+  "item.goety.forbidden_scroll": "Forbidden Scroll",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -307,6 +310,7 @@
   "effect.goety.apostle_curse": "Burn Hex",
   "effect.goety.soul_shield": "Soul Shield",
   "effect.goety.desiccate": "Desiccate",
+  "effect.goety.soul_hunger": "Soul Hunger",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
@@ -320,8 +324,10 @@
   "info.goety.soulitems.cost": "\u00A73Soul Cost: %d\u00A73",
   "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
+  "info.goety.items.forbidden_scroll": "\u00A75The Secrets to Immortality...\u00A75",
   "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
   "info.goety.research.nether": "You have transcribed the book of the Cultists!",
+  "info.goety.research.lich": "You have learned the secret to Immortality!",
   "info.goety.ritual.villager": "Villager",
   "info.goety.ritual.zombie_minion": "Zombie Servant",
   "info.goety.ritual.shade": "Shade",
@@ -347,6 +353,11 @@
   "container.goety.soulforge": "Soul Forge",
   "enchantment.goety.souleater": "Soul Eater",
   "enchantment.goety.wanting": "Wanting",
+  "enchantment.goety.potency": "Potency",
+  "enchantment.goety.radius": "Radius",
+  "enchantment.goety.range": "Range",
+  "enchantment.goety.burning": "Burning",
+  "enchantment.goety.absorb": "Life Absorb",
   "advancements.goety.root.title": "Goety",
   "advancements.goety.root.description": "Get started on your journey",
   "advancements.goety.craftinfuser.title": "Cursed Elements",
@@ -399,6 +410,7 @@
   "jei.goety.craftType.null": "Ritual Type: Empty",
   "jei.goety.craftType.animalis": "Ritual Type: Animalis",
   "jei.goety.craftType.necroturgy": "Ritual Type: Necroturgy",
+  "jei.goety.craftType.lich": "Ritual Type: Necroturgy",
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
   "jei.goety.craftType.forge": "Ritual Type: Forge",
   "jei.goety.craftType.magic": "Ritual Type: Magic",
