Added Skull Lord, optimized Imports and fixed some stuff.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -74,7 +74,9 @@
   "entity.goety.vizier":"Vizier",
   "entity.goety.irk":"Irk",
   "entity.goety.scorch":"Scorch",
-  "entity.goety.nethernal":"Nethernal",
+  "entity.goety.skull_lord":"Skull Lord",
+  "entity.goety.bone_lord":"Bone Lord",
+  "entity.goety.sentinel":"Sentinel",
   "entity.goety.penance":"Penance",
   "entity.goety.boat":"Boat",
   "entity.goety.soulfireball":"Soul Fireball",
@@ -128,6 +130,7 @@
   "item.goety.skeleton_minion_spawn_egg": "Skeleton Servant Spawn Egg",
   "item.goety.spiderling_minion_spawn_egg": "Spiderling Spawn Egg",
   "item.goety.creeperling_minion_spawn_egg": "Creeperling Spawn Egg",
+  "item.goety.skull_lord_spawn_egg": "Skull Lord Spawn Egg",
   "item.goety.penance_spawn_egg": "Penance Spawn Egg",
   "item.goety.blazecore": "Blaze Core",
   "item.goety.brokenblazecore": "Broken Blaze Core",
@@ -295,6 +298,7 @@
   "block.goety.arca": "Arca",
   "block.goety.soul_light": "Soul Light",
   "block.goety.glow_light": "Glow Light",
+  "block.goety.pithos": "Pithos",
   "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
@@ -350,7 +354,7 @@
   "subtitle.goety.apostle_death": "Apostle perishes",
   "subtitle.goety.roar_spell": "Loud Roar",
   "subtitle.goety.corrupt_explosion": "Sandy Explosion",
-  "container.goety.soulforge": "Soul Forge",
+  "container.goety.pithos": "Pithos",
   "enchantment.goety.souleater": "Soul Eater",
   "enchantment.goety.wanting": "Wanting",
   "enchantment.goety.potency": "Potency",
