Revamped Arachnea Robes to Fel Robes. Finally made the mod not crash a Server while booting it up.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -156,11 +156,11 @@
   "item.goety.necrobootsofwander": "Necro Boots of Wander",
   "item.goety.necroarmoredhelm": "Necro Battle Helm",
   "item.goety.necroarmoredrobe": "Necro Battle Robe",
-  "item.goety.arachnohelm": "Araneae Helm",
-  "item.goety.arachnorobe": "Araneae Robe",
-  "item.goety.arachnoarmoredhelm": "Araneae Battle Helm",
-  "item.goety.arachnoarmoredrobe": "Araneae Battle Robe",
-  "item.goety.arachnobootsofwander": "Araneae Boots of Wander",
+  "item.goety.felhelm": "Fel Helm",
+  "item.goety.felrobe": "Fel Robe",
+  "item.goety.felarmoredhelm": "Fel Battle Helm",
+  "item.goety.felarmoredrobe": "Fel Battle Robe",
+  "item.goety.felbootsofwander": "Fel Boots of Wander",
   "item.goety.cultisthelm": "Cultist Helm",
   "item.goety.cultistrobe": "Cultist Robe",
   "item.goety.cultistarmoredhelm": "Cultist Battle Helm",
