Added Duration Enchantment and re-added WanderBootsArmor.java

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -82,6 +82,7 @@
   "entity.goety.soulfireball":"Soul Fireball",
   "entity.goety.fireball": "Small Fireball",
   "entity.goety.lavaball": "Fireball",
+  "entity.goety.dragon_fireball": "Dragon Fireball",
   "entity.goety.warped_spear":"Warped Spear",
   "entity.goety.pitchfork":"Pitchfork",
   "entity.goety.scorchball":"Nether Meteor",
@@ -290,6 +291,7 @@
   "block.goety.haunted_pressure_plate": "Haunted Pressure Plate",
   "block.goety.haunted_sign": "Haunted Sign",
   "block.goety.haunted_wall_sign": "Haunted Wall Sign",
+  "block.goety.dark_pressure_plate": "Dark Pressure Plate",
   "block.goety.stripped_haunted_log": "Stripped Haunted Log",
   "block.goety.stripped_haunted_wood": "Stripped Haunted Wood",
   "block.goety.iron_finger": "Iron Finger",
@@ -362,6 +364,7 @@
   "enchantment.goety.range": "Range",
   "enchantment.goety.burning": "Burning",
   "enchantment.goety.absorb": "Life Absorb",
+  "enchantment.goety.duration": "Duration",
   "advancements.goety.root.title": "Goety",
   "advancements.goety.root.description": "Get started on your journey",
   "advancements.goety.craftinfuser.title": "Cursed Elements",
