Fixed End Bug and added some Advancements.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -387,6 +387,16 @@
   "advancements.goety.craftbitingfocus.description": "Perhaps it can be improved later on...",
   "advancements.goety.kill_a_cultist.title": "You're An Ant Beneath My Boot!",
   "advancements.goety.kill_a_cultist.description": "Nether Worship is hot nowadays.",
+  "advancements.goety.kill_cultists.title": "And You'll Always Will Be!",
+  "advancements.goety.kill_cultists.description": "Defeated each type of Nether Cultists.",
+  "advancements.goety.kill_envioker.title": "Angry Video Game Illager",
+  "advancements.goety.kill_envioker.description": "Looks like you've gathered some attention from those Illagers...",
+  "advancements.goety.kill_illagers.title": "Expected The Unexpected",
+  "advancements.goety.kill_illagers.description": "Defeated an Envioker, an Inquillager and a Conquillager!",
+  "advancements.goety.kill_apostle.title": "Trumpeter's Shadow",
+  "advancements.goety.kill_apostle.description": "Defeated an Apostle, the Pale Faced envoy of the Nether.",
+  "advancements.goety.become_lich.title": "I am beyond strength",
+  "advancements.goety.become_lich.description": "Ascend to Lichdom and become truly immortal!",
   "commands.infamy.add.success.single": "Gave %s Infamy to %s",
   "commands.infamy.add.success.multiple": "Gave %s Infamy to %s players",
   "commands.infamy.set.success.single": "Set %s Infamy on %s",
