Trying to improve the Cultists now.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -38,6 +38,7 @@
   "entity.goety.thug":"Thug",
   "entity.goety.crimson_spider":"Crimson Spider",
   "entity.goety.disciple":"Disciple",
+  "entity.goety.beldam":"Beldam",
   "entity.goety.apostle":"Apostle",
   "entity.goety.zombievillagerminion":"Zombie Villager Servant",
   "entity.goety.skeletonvillagerminion":"Skeleton Villager Servant",
@@ -106,6 +107,7 @@
   "item.goety.thug_spawn_egg": "Thug Spawn Egg",
   "item.goety.crimson_spider_spawn_egg": "Crimson Spider Spawn Egg",
   "item.goety.disciple_spawn_egg": "Disciple Spawn Egg",
+  "item.goety.beldam_spawn_egg": "Beldam Spawn Egg",
   "item.goety.apostle_spawn_egg": "Apostle Spawn Egg",
   "item.goety.envioker_spawn_egg": "Envioker Spawn Egg",
   "item.goety.inquillager_spawn_egg": "Inquillager Spawn Egg",
