Hopefully no Particle Server Crashes!

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -89,6 +89,7 @@
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.corruptskull":"Desiccated Skull",
+  "entity.goety.ice_storm":"Ice Storm",
   "entity.goety.soul_bullet":"Soul Bullet",
   "entity.goety.soul_light":"Soul Light",
   "entity.goety.glow_light":"Glow Light",
@@ -98,6 +99,7 @@
   "entity.goety.fire_tornado":"Flaming Tornado",
   "entity.goety.lightningtrap":"Lightning Trap",
   "entity.goety.fireraintrap":"Fire Rain Trap",
+  "entity.goety.burning_ground":"Burning Ground",
   "entity.goety.stormutil":"Thunderstorm",
   "entity.goety.summon_apostle":"Apostle",
   "itemGroup.goetyTab": "Goety",
@@ -205,6 +207,7 @@
   "item.goety.firebreathfocus": "Fire Breath Focus",
   "item.goety.soullightfocus": "Soul Light Focus",
   "item.goety.glowlightfocus": "Glow Light Focus",
+  "item.goety.icestormfocus": "Ice Storm Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
