Trying to fix Server Bugs, Creative Menu Bug still remains.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -205,6 +205,7 @@
   "item.goety.illusionfocus": "Mirror Focus",
   "item.goety.soulshieldfocus": "Soul Shield Focus",
   "item.goety.firebreathfocus": "Fire Breath Focus",
+  "item.goety.frostbreathfocus": "Frost Breath Focus",
   "item.goety.soullightfocus": "Soul Light Focus",
   "item.goety.glowlightfocus": "Glow Light Focus",
   "item.goety.icestormfocus": "Ice Storm Focus",
@@ -451,6 +452,14 @@
   "item.goety.jei_dummy.none.tooltip": "This ritual does not create any items.",
   "death.attack.fire_breath": "%1$s was reduced to ash by %2$s",
   "death.attack.fire_breath.item": "%1$s was burned by %2$s using %3$s",
+  "death.attack.frost_breath": "%1$s was chilled by %2$s",
+  "death.attack.frost_breath.item": "%1$s was chilled by %2$s using %3$s",
+  "death.attack.frost": "%1$s was frozen to death",
+  "death.attack.frost.player": "%1$s was frozen to death whilst trying to escape %2$s",
+  "death.attack.directFrost": "%1$s was frozen by %2$s",
+  "death.attack.directFrost.player": "%1$s was frozen while fighting %2$s",
+  "death.attack.indirectFrost": "%1$s has been frozen by %2$s",
+  "death.attack.indirectFrost.item": "%1$s has been frozen by %2$s using %3$s",
   "death.attack.desiccate": "%1$s was turned into sand",
   "death.attack.desiccate.player": "%1$s was turned into sand whilst trying to escape %2$s",
   "death.attack.directDesiccate": "%1$s was desiccated by %2$s",
