Creative Menu Bug still remains. Apostle Improvements.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -44,6 +44,7 @@
   "entity.goety.skeletonvillagerminion":"Skeleton Villager Servant",
   "entity.goety.zpiglinminion":"Zombified Piglin Servant",
   "entity.goety.zpiglinbruteminion":"Zombified Piglin Brute Servant",
+  "entity.goety.hoglord":"Hoglord",
   "entity.goety.envioker":"Envioker",
   "entity.goety.inquillager":"Inquillager",
   "entity.goety.conquillager":"Conquillager",
@@ -111,6 +112,7 @@
   "item.goety.disciple_spawn_egg": "Disciple Spawn Egg",
   "item.goety.beldam_spawn_egg": "Beldam Spawn Egg",
   "item.goety.apostle_spawn_egg": "Apostle Spawn Egg",
+  "item.goety.hoglord_spawn_egg": "Hoglord Spawn Egg",
   "item.goety.envioker_spawn_egg": "Envioker Spawn Egg",
   "item.goety.inquillager_spawn_egg": "Inquillager Spawn Egg",
   "item.goety.conquillager_spawn_egg": "Conquillager Spawn Egg",
@@ -323,6 +325,7 @@
   "effect.goety.soul_shield": "Soul Shield",
   "effect.goety.desiccate": "Desiccate",
   "effect.goety.soul_hunger": "Soul Hunger",
+  "effect.goety.health_loss": "Health Loss",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
