Fixed Skull Lord Particle Bug. Made Warped Spear reach further and added Bucket of Golden King.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -238,6 +238,7 @@
   "item.goety.forbidden_fragment": "Forbidden Fragment",
   "item.goety.forbidden_scroll": "Forbidden Scroll",
   "item.goety.burning_tusk": "Burning Tusk",
+  "item.goety.sacred_fish_bucket": "Bucket of Golden King",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
   "block.goety.cursed_stone_slab": "Cursed Stone Slab",
