Added new spell. Fixed some particles/sound bugs. Made Tormentors less annoying.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -67,6 +67,7 @@
   "entity.goety.zombie_minion":"Zombie Servant",
   "entity.goety.farmer_minion":"Zombie Farmer Servant",
   "entity.goety.skeleton_minion":"Skeleton Servant",
+  "entity.goety.undead_wolf":"Undead Wolf",
   "entity.goety.illusion_clone":"Doppelganger",
   "entity.goety.spiderling_minion":"Spiderling",
   "entity.goety.creeperling_minion":"Creeperling",
@@ -132,6 +133,7 @@
   "item.goety.zombie_minion_spawn_egg": "Zombie Servant Spawn Egg",
   "item.goety.farmer_minion_spawn_egg": "Zombie Farmer Servant Spawn Egg",
   "item.goety.skeleton_minion_spawn_egg": "Skeleton Servant Spawn Egg",
+  "item.goety.undead_wolf_spawn_egg": "Undead Wolf Spawn Egg",
   "item.goety.spiderling_minion_spawn_egg": "Spiderling Spawn Egg",
   "item.goety.creeperling_minion_spawn_egg": "Creeperling Spawn Egg",
   "item.goety.skull_lord_spawn_egg": "Skull Lord Spawn Egg",
@@ -208,6 +210,7 @@
   "item.goety.soullightfocus": "Soul Light Focus",
   "item.goety.glowlightfocus": "Glow Light Focus",
   "item.goety.icestormfocus": "Ice Storm Focus",
+  "item.goety.houndingfocus": "Hounding Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
