Use these past updates to learn how (not) to Particle.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -88,6 +88,7 @@
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.corruptskull":"Desiccated Skull",
+  "entity.goety.dead_tnt":"Dead TNT",
   "entity.goety.ice_storm":"Ice Storm",
   "entity.goety.soul_bullet":"Soul Bullet",
   "entity.goety.soul_light":"Soul Light",
@@ -146,8 +147,7 @@
   "item.goety.soulruby": "Ruby of Souls",
   "item.goety.magic_emerald": "Activated Emerald",
   "item.goety.soul_emerald": "Concentrated Emerald",
-  "item.goety.riftshard": "Rift Shard",
-  "item.goety.philosophersstone": "Philosopher's Stone",
+  "item.goety.philosophers_stone": "Philosopher's Stone",
   "item.goety.sacred_fish": "Golden King",
   "item.goety.darkhelm": "Dark Helm",
   "item.goety.darkrobe": "Dark Robe",
@@ -211,6 +211,7 @@
   "item.goety.glowlightfocus": "Glow Light Focus",
   "item.goety.icestormfocus": "Ice Storm Focus",
   "item.goety.houndingfocus": "Hounding Focus",
+  "item.goety.launchfocus": "Launching Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -313,6 +314,7 @@
   "block.goety.tall_skull": "Tall Skull",
   "block.goety.wall_tall_skull": "Tall Skull",
   "block.goety.false_portal": "Cursed Nether Portal",
+  "block.goety.dead_tnt": "Dead TNT",
   "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
