Tweaked Transfer Gems and Apostle behavior. Cleaned up some codes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -2,16 +2,16 @@
   "name.goety.apostle.0" : "Leprosy",
   "name.goety.apostle.1" : "Nosghoul",
   "name.goety.apostle.2" : "Javan Mal",
-  "name.goety.apostle.3" : "Van Dose",
+  "name.goety.apostle.3" : "Ezrafel",
   "name.goety.apostle.4" : "Finbar",
   "name.goety.apostle.5" : "Avageleon",
   "name.goety.apostle.6" : "Ur-Tsar",
-  "name.goety.apostle.7" : "Shorun",
+  "name.goety.apostle.7" : "Khormack",
   "name.goety.apostle.8" : "Gan'Dak",
   "name.goety.apostle.9" : "Malghash",
   "name.goety.apostle.10" : "Baal Zephon",
   "name.goety.apostle.11" : "Vexx Mock",
-  "name.goety.apostle.12" : "Krosen",
+  "name.goety.apostle.12" : "Krozen",
   "name.goety.apostle.13" : "Stone Blackmire",
   "name.goety.apostle.14" : "Margo Sil",
   "name.goety.apostle.15" : "Seraphent",
@@ -362,6 +362,7 @@
   "tooltip.goety.arcaX": "X: ",
   "tooltip.goety.arcaY": "Y: ",
   "tooltip.goety.arcaZ": "Z: ",
+  "tooltip.goety.arcaPlayer": "Owner: ",
   "tooltip.goety.arca_not_bound": "Has yet to be bound to an Arca.",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
