Added Frost Armor. No more Soul Eater on Armor Sets.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -181,6 +181,10 @@
   "item.goety.cultistrobe": "Cultist Robe",
   "item.goety.cultistarmoredhelm": "Cultist Battle Helm",
   "item.goety.cultistarmoredrobe": "Cultist Battle Robe",
+  "item.goety.frost_helmet": "Frost Helmet",
+  "item.goety.frost_chestplate": "Frost Chestplate",
+  "item.goety.frost_leggings": "Frost Leggings",
+  "item.goety.frost_boots": "Frost Boots",
   "item.goety.warped_spear": "Warped Spear",
   "item.goety.pitchfork": "Pitchfork",
   "item.goety.dark_scythe": "Dark Scythe",
@@ -458,6 +462,8 @@
   "subtitle.goety.fire_tornado_ambient": "Flaming Tornado",
   "container.goety.pithos": "Pithos",
   "enchantment.goety.souleater": "Soul Eater",
+  "enchantment.goety.soultaker": "Soul Taker",
+  "enchantment.goety.soulfeeder": "Soul Feeder",
   "enchantment.goety.wanting": "Wanting",
   "enchantment.goety.potency": "Potency",
   "enchantment.goety.radius": "Radius",
@@ -465,7 +471,9 @@
   "enchantment.goety.burning": "Burning",
   "enchantment.goety.absorb": "Life Absorb",
   "enchantment.goety.duration": "Duration",
-  "enchantment.goety.souleater.desc": "Increases the amount of Soul Energy gained when killing.",
+  "enchantment.goety.souleater.desc": "Increases the amount of Soul Energy gained when killing with weapons.",
+  "enchantment.goety.soultaker.desc": "Increases the amount of Soul Energy gained when killing with bows/crossbows.",
+  "enchantment.goety.soulfeeder.desc": "Increases the amount of Soul Energy gained when killing with tools.",
   "enchantment.goety.wanting.desc": "Mobs will drop more loot when killed via Summoned Creatures/Spells.",
   "enchantment.goety.potency.desc": "Increases the damage of Spells.",
   "enchantment.goety.radius.desc": "Increases radius of Spells.",
