Balancing changes and some bug fixes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -436,13 +436,13 @@
   "block.goety.cultist_banner": "Cult Banner",
 
   "effect.goety.cursed": "Cursed",
-  "effect.goety.cursed.description": "Causes the player to take double amount of damage, higher levels makes player take more damage. Overrides Sapped.",
+  "effect.goety.cursed.description": "Doubles the amount of damage taken, higher levels increases the damage. Overrides Sapped.",
   "effect.goety.summondown": "Summon Down",
   "effect.goety.summondown.description": "Spells cost more Soul Energy to cast, higher levels increases cost. Newly summoned Mobs will gain Sapped and Weakness.",
   "effect.goety.sapped": "Sapped",
-  "effect.goety.sapped.description": "Player takes 20% more damage per level.",
+  "effect.goety.sapped.description": "Increases damage taken by 20% per level.",
   "effect.goety.hosted": "Hosted",
-  "effect.goety.hosted.description": "Parasites occasionally spawns on the player.",
+  "effect.goety.hosted.description": "Parasites occasionally spawns on infected mob.",
   "effect.goety.goldtouched": "Gold Touched",
   "effect.goety.goldtouched.description": "Mobs drop gold nuggets on death, with amount increasing on higher levels.",
   "effect.goety.cosmic": "???",
@@ -454,17 +454,17 @@
   "effect.goety.nomine": "Anti Stone Break",
   "effect.goety.nomine.description": "Prevents player from breaking Stone and Metallic Blocks.",
   "effect.goety.apostle_curse": "Burn Hex",
-  "effect.goety.apostle_curse.description": "Removes Fire Resistance from player. On Hard, fire damage doubles.",
+  "effect.goety.apostle_curse.description": "Removes Fire Resistance from living entities. On Hard, fire damage doubles.",
   "effect.goety.soul_shield": "Soul Shield",
   "effect.goety.soul_shield.description": "Shields and protect player from arrows.",
   "effect.goety.desiccate": "Desiccate",
-  "effect.goety.desiccate.description": "Slows movement and mining, weakens player melee attacks. Occasionally damages player.",
+  "effect.goety.desiccate.description": "Slows movement and mining, weakens melee attacks. Occasionally inflicts damage.",
   "effect.goety.soul_hunger": "Soul Hunger",
-  "effect.goety.soul_hunger.description": "Weakens the player's movement, mining and attack speed and melee damage.",
+  "effect.goety.soul_hunger.description": "Weakens movement, mining and attack speed and melee damage.",
   "effect.goety.health_loss": "Health Loss",
   "effect.goety.health_loss.description": "Decreases maximum health; higher levels decreases more health.",
-  "effect.goety.illager_bane": "Bane of Omens",
-  "effect.goety.illager_bane.description": "Illagers will run from Player. Infamy won't increase and is reduced to zero.",
+  "effect.goety.buff": "Buff",
+  "effect.goety.buff.description": "Increases melee attack damage by 0.5 hearts per level.",
 
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
