Added a new block to store excess amounts of Dried Remnants.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -363,6 +363,7 @@
   "block.goety.dead_sandstone_wall": "Dead Sandstone Wall",
   "block.goety.dead_pile": "Dead Sand Pile",
   "block.goety.dead_block": "Desiccated Block",
+  "block.goety.dried_remnant_block": "Remnant Block",
 
   "block.goety.haunted_cactus": "Haunted Cactus",
   "block.goety.haunted_bush": "Haunted Bush",
