New Servants! Some bug fixes and new improvements!

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -77,6 +77,7 @@
   "entity.goety.friendly_vex":"Vex",
   "entity.goety.friendly_scorch":"Scorch",
   "entity.goety.zombie_minion":"Zombie Servant",
+  "entity.goety.drowned_minion":"Drowned Servant",
   "entity.goety.farmer_minion":"Zombie Farmer Servant",
   "entity.goety.skeleton_minion":"Skeleton Servant",
   "entity.goety.stray_minion":"Stray Servant",
@@ -86,6 +87,8 @@
   "entity.goety.illusion_clone":"Doppelganger",
   "entity.goety.spiderling_minion":"Spiderling",
   "entity.goety.creeperling_minion":"Creeperling",
+  "entity.goety.fel_fly":"Fel Fly",
+  "entity.goety.rottreant":"Rottreant",
   "entity.goety.tamed_spider":"Loyal Spider",
 
   "entity.goety.vizier":"Vizier",
@@ -163,13 +166,17 @@
   "item.goety.scorch_spawn_egg": "Scorch Spawn Egg",
   "item.goety.sentinel_spawn_egg": "Sentinel Spawn Egg",
   "item.goety.zombie_minion_spawn_egg": "Zombie Servant Spawn Egg",
+  "item.goety.drowned_minion_spawn_egg": "Drowned Servant Spawn Egg",
   "item.goety.farmer_minion_spawn_egg": "Zombie Farmer Servant Spawn Egg",
   "item.goety.skeleton_minion_spawn_egg": "Skeleton Servant Spawn Egg",
   "item.goety.stray_minion_spawn_egg": "Stray Servant Spawn Egg",
   "item.goety.dreden_minion_spawn_egg": "Dreden Servant Spawn Egg",
+  "item.goety.zpiglin_minion_spawn_egg": "Zombified Piglin Servant Spawn Egg",
+  "item.goety.zpiglin_brute_minion_spawn_egg": "Zombified Piglin Brute Servant Spawn Egg",
   "item.goety.undead_wolf_spawn_egg": "Undead Wolf Spawn Egg",
   "item.goety.spiderling_minion_spawn_egg": "Spiderling Spawn Egg",
   "item.goety.creeperling_minion_spawn_egg": "Creeperling Spawn Egg",
+  "item.goety.fel_fly_spawn_egg": "Fel Fly Spawn Egg",
   "item.goety.skull_lord_spawn_egg": "Skull Lord Spawn Egg",
 
   "item.goety.blazecore": "Blaze Core",
@@ -452,6 +459,7 @@
   "block.goety.glow_light": "Glow Light",
   "block.goety.pithos": "Pithos",
   "block.goety.forbidden_grass": "Forbidden Grass Block",
+  "block.goety.rotten_pumpkin": "Rotten Pumpkin",
 
   "block.goety.tall_skull": "Tall Skull",
   "block.goety.wall_tall_skull": "Tall Skull",
@@ -470,6 +478,8 @@
   "effect.goety.hosted.description": "Parasites occasionally spawns on infected mob.",
   "effect.goety.goldtouched": "Gold Touched",
   "effect.goety.goldtouched.description": "Mobs drop gold nuggets on death, with amount increasing on higher levels.",
+  "effect.goety.fel_vision": "Fel Vision",
+  "effect.goety.fel_vision.description": "Grants Night Vision in darkness, Blindness in daylight.",
   "effect.goety.cosmic": "???",
   "effect.goety.cosmic.description": "Doubles Experience drops. Randomly grants either beneficial or negative effects.",
   "effect.goety.illague": "Illague",
@@ -593,6 +603,20 @@
   "subtitle.goety.urbhadhach_attack": "Urbhadhach bites",
   "subtitle.goety.urbhadhach_step": "Urbhadhach prowls",
   "subtitle.goety.urbhadhach_death": "Urbhadhach dies",
+
+  "subtitle.goety.fel_fly_loop": "Fel Fly buzzes",
+  "subtitle.goety.fel_fly_hurt": "Fel Fly hurts",
+  "subtitle.goety.fel_fly_death": "Fel Fly dies",
+
+  "subtitle.goety.rot_tree_ambient": "Rottreant animates",
+  "subtitle.goety.rot_tree_hurt": "Rottreant hurts",
+  "subtitle.goety.rot_tree_heavyhurt": "Rottreant gets axed",
+  "subtitle.goety.rot_tree_attack": "Rottreant smashes",
+  "subtitle.goety.rot_tree_repair": "Rottreant repaired",
+  "subtitle.goety.rot_tree_step": "Rottreant steps",
+  "subtitle.goety.rot_tree_death": "Rottreant dies",
+  "subtitle.goety.rot_tree_enter": "Creature enters Rottreant",
+  "subtitle.goety.rot_tree_exit": "Creature leaves Rottreant",
 
   "subtitle.goety.evil_laugh": "Evil Laugh",
   "subtitle.goety.roar_spell": "Loud Roar",
