Improved Rottreants and made Fel Helm less a hassle to wear.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -119,6 +119,7 @@
   "entity.goety.poison_ball":"Poison Ball",
   "entity.goety.fang":"Magic Fang",
   "entity.goety.spike":"Royal Spike",
+  "entity.goety.roots":"Rotten Roots",
   "entity.goety.frost_ball":"Frost Ball",
   "entity.goety.witchgale":"Witch's Gale",
   "entity.goety.fire_tornado":"Flaming Tornado",
@@ -479,7 +480,7 @@
   "effect.goety.goldtouched": "Gold Touched",
   "effect.goety.goldtouched.description": "Mobs drop gold nuggets on death, with amount increasing on higher levels.",
   "effect.goety.fel_vision": "Fel Vision",
-  "effect.goety.fel_vision.description": "Grants Night Vision in darkness, Blindness in daylight.",
+  "effect.goety.fel_vision.description": "Grants Night Vision in darkness, increases fog density in daylight.",
   "effect.goety.cosmic": "???",
   "effect.goety.cosmic.description": "Doubles Experience drops. Randomly grants either beneficial or negative effects.",
   "effect.goety.illague": "Illague",
