Improved Wraiths, added a new Redstone machine.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -370,6 +370,7 @@
   "block.goety.dark_altar": "Dark Altar",
   "block.goety.pedestal": "Pedestal",
   "block.goety.soul_absorber": "Soul Absorber",
+  "block.goety.ghost_fire_trap": "Ghost Fire Trap",
 
   "block.goety.frost_block": "Block of Frost Metal",
 
