Renamed Internal Config name and fixed falling summon bug.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -12,7 +12,7 @@
   "name.goety.apostle.10" : "Baal Zephon",
   "name.goety.apostle.11" : "Vexx Mock",
   "name.goety.apostle.12" : "Krozen",
-  "name.goety.apostle.13" : "Stone Blackmire",
+  "name.goety.apostle.13" : "Kim'Se",
   "name.goety.apostle.14" : "Margo Sil",
   "name.goety.apostle.15" : "Seraphent",
   "name.goety.apostle.16" : "Indearium",
